@@ -1,0 +1,3 @@
+import compileall
+compileall.compile_dir("usr", force=1)
+
